kotlin-ide/idea/testData/compiler/asJava/lightClasses/compilationErrors/PrivateInTrait.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {

public static final class DefaultImpls /* PrivateInTrait.DefaultImpls*/ {
  private static java.lang.String getN(PrivateInTrait);//  getN(PrivateInTrait)

  private static java.lang.String getNn(PrivateInTrait);//  getNn(PrivateInTrait)

  private static void setNn(PrivateInTrait, java.lang.String);//  setNn(PrivateInTrait, java.lang.String)

}}